
  [ Colin Watson ]
  * Update d-i/update-control to work with the new Dpkg::Deps module in
    dpkg-dev 1.14.8.
  * Append to /var/log/oem-config.log rather than overwriting it.

  [ Evan Dandrea ]
  * Copy the value of debian-installer/locale over to the target system
    so that it gets used by oem-config as the default language
    selection (LP: #181291).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 09 Jan 2008 02:08:52 -0500

oem-config (1.24) hardy; urgency=low

  * Fix "Step 1 of 4" counter advancement (part of LP #153139, #153336).
  * Fix oem-config-frontend-* virtual package name generation to handle ~ in
    versions.
  * Check $DISPLAY before trying to run zenity or kdialog.
  * Add Vcs-Bzr field to debian/control.
  * Convert to python-central.
  * Adjust for localechooser 1.39:
    - Don't edit /etc/environment unless it already contains LANG or
      LANGUAGE settings.
  * Adjust for localechooser 1.40:
    - Cope with localechooser asking countrychooser/country-name rather than
      countrychooser/shortlist.
  * Automatic update of included source packages: console-setup 1.19ubuntu1,
    localechooser 1.42ubuntu1, tzsetup 1:0.19, user-setup 1.16ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 03 Dec 2007 13:52:21 +0000

oem-config (1.23) gutsy; urgency=low

  * busybox sed doesn't support making backup files when editing in place
    (e.g. 'sed -i.oem'); chroot to edit kdmrc as well.
  * Fix GTK .desktop filename used in oem-config-prepare gksudo invocation.
  * Install .desktop files under /usr/share/applications/ at first install
    rather than shipping them there in the .debs, and remove them once
    oem-config-firstboot has been run (LP: #145281).
  * Set HOME in oem-config-dm so that iceauth is happier.
  * Start dcopserver before kwin (LP: #145226).
  * Run kdesktop too to fix the background in KDE.
  * Update translations from Rosetta.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 Oct 2007 15:04:03 +0100
